--- a/src/components/Header/header.module.css
+++ b/src/components/Header/header.module.css
@@ -1,18 +1,24 @@
 .header {
-    background: white;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 60px;
-    position: relative;
-    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
-    padding: 0 16px;
-  }
-  
-  .iconContainer {
-    position: absolute;
-    left: 32px;
-    display: flex;
-    align-items: center;
-    margin-bottom: 12px;
-  }
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px;
+  background-color: #f8f9fa;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+  height: 60px;
+}
+
+.iconContainer {
+  height: 40px;
+  margin-left: 20px;
+}
+
+.menuButton {
+  background: none;
+  border: none;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  margin-right: 20px;
+  color: var(--purple);
+}
