--- a/src/components/TaskList/tasklist.module.css
+++ b/src/components/TaskList/tasklist.module.css
@@ -86,6 +86,7 @@
   margin-bottom: 10px;
   font-size: 16px;
   font-weight: bold;
+  user-select: none;
 }
 
 .container {
@@ -227,12 +228,14 @@
   max-width: 25%;
   height: auto;
   margin-bottom: 5px;
+  user-select: none;
 }
 
 .noTasksMessage {
   text-align: center;
   color: var(--purple);
   font-weight: bold;
+  user-select: none;
 }
 
 .modalActions {
