--- a/src/components/Sidebar/sidebar.module.css
+++ b/src/components/Sidebar/sidebar.module.css
@@ -1,64 +1,71 @@
+.sidebarContainer {
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+}
+
 .sidebarContent {
-    padding: 20px;
-    display: flex;
-    flex-direction: column;
-    height: 100%;
-  }
-  
-  .links {
-    flex-grow: 1;
-    margin-bottom: 20px;
-  }
-  
-  .link {
-    display: flex;
-    align-items: center;
-    margin: 15px 0;
-    color: var(--purple);
-    text-decoration: none;
-    font-size: 18px;
-    cursor: pointer;
-  }
-  
-  .link:hover {
-    text-decoration: none;
-  }
-  
-  .icon {
-    margin-right: 32px;
-    flex-shrink: 0;
-  }
-  
-  .userSection {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    margin-bottom: 30px;
-  }
-  
-  .input {
-    width: 50%;
-    padding: 8px;
-    margin: 10px 0;
-    background: transparent;
-    border: none; 
-    border-bottom: 1px solid var(--purple);
-    color: var(--purple);
-    font-size: 16px;
-  }
-  
-  .input:focus {
-    outline: none;
-  }
-  
-  .button {
-    padding: 8px 12px;
-    background-color: var(--purple);
-    color: white;
-    border: none;
-    cursor: pointer;
-  }
-  
-  .button:hover {
-    background-color: var(--purple);
-  }
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  flex-grow: 1;
+}
+
+.links {
+  flex-grow: 1;
+  margin-bottom: 20px;
+}
+
+.link {
+  display: flex;
+  align-items: center;
+  margin: 15px 0;
+  color: var(--purple);
+  text-decoration: none;
+  font-size: 18px;
+  cursor: pointer;
+}
+
+.link:hover {
+  text-decoration: none;
+}
+
+.icon {
+  margin-right: 32px;
+  flex-shrink: 0;
+}
+
+.userSection {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  margin-bottom: 30px;
+}
+
+.input {
+  width: 50%;
+  padding: 8px;
+  margin: 10px 0;
+  background: transparent;
+  border: none; 
+  border-bottom: 1px solid var(--purple);
+  color: var(--purple);
+  font-size: 16px;
+}
+
+.input:focus {
+  outline: none;
+}
+
+.button {
+  padding: 8px 12px;
+  background-color: var(--purple);
+  color: white;
+  border: none;
+  cursor: pointer;
+}
+
+.button:hover {
+  background-color: var(--purple);
+}
