--- a/src/components/TaskList/tasklist.module.css
+++ b/src/components/TaskList/tasklist.module.css
@@ -87,6 +87,7 @@
   font-size: 16px;
   font-weight: bold;
   user-select: none;
+  color:var(--gray);
 }
 
 .container {
@@ -121,6 +122,10 @@
   border: none;
   cursor: pointer;
   font-size: 1.2rem;
+}
+
+.taskText {
+  color: var(--gray);
 }
 
 .taskDescription {
@@ -179,6 +184,7 @@
 
 .modalField label {
   margin-bottom: 8px;
+  color: var(--gray);
 }
 
 .modalInput, .modalDatepicker {
@@ -186,6 +192,7 @@
   padding: 8px;
   border: 1px solid var(--gray1);
   border-radius: 4px;
+  color: var(--gray2);
 }
 
 .modalButton {
