--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,6 +1,8 @@
 :root {
   --orange:#F4512C;
-  --purple:#5E1B89;
+  --purple:#5E1B88;
+  --orange-darker: #D63E1F;
+  --purple-darker: #4A146B;
   --white: #F8FFFE;
   --gray:  #475569;
   --gray1: #CCCCCC;
