--- a/src/components/TaskList/tasklist.module.css
+++ b/src/components/TaskList/tasklist.module.css
@@ -87,7 +87,43 @@
   font-size: 16px;
   font-weight: bold;
   user-select: none;
-  color:var(--gray);
+  color: var(--gray);
+}
+
+.headerButtons {
+  display: flex;
+  gap: 20px;
+  margin-right: 250px;
+}
+
+.headerCompleteButton {
+  background-color: var(--orange);
+  color: white;
+  font-weight: bold;
+  padding: 8px 16px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  font-size: 16px;
+}
+
+.headerDeleteButton {
+  background-color: var(--purple);
+  color: white;
+  font-weight: bold;
+  padding: 8px 16px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  font-size: 16px;
+}
+
+.headerCompleteButton:hover {
+  background-color: var(--orange-darker);
+}
+
+.headerDeleteButton:hover {
+  background-color: var(--purple-darker);
 }
 
 .container {
